align issue resolve in dpc

--- a/Desktop/inovicegit/src/assets/css/prints/detailprintc.css
+++ b/Desktop/inovicegit/src/assets/css/prints/detailprintc.css
@@ -231,6 +231,9 @@
 .brtop_dpc{
    border-top: 1px solid #BDBDBD
 }
+.brtop_dpc2{
+   border-top: 0.5px solid #BDBDBD
+}
 .brtleft_dpc{
    border-left: 1px solid #BDBDBD
 }
